05_Namespaces/Networkpolicies/busybox_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  labels:
    app: busybox
spec:
  containers:
  - name: busybox-container
    image: busybox
    command: ["sh", "-c", "echo 'Hello Kubernetes!' && sleep 3600"]
