05_Namespaces/Networkpolicies/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: dev-team
  labels:
    app: nginx-deploy
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx-deploy
  template:
    metadata:
      labels:
        app: nginx-deploy
    spec:
      containers:
      - name: nginx-pod
        image: nginx
        ports:
        - containerPort: 80
        # resources:
        #   limits:
        #      cpu: "150m"
        #      memory: "250Mi"
        #   requests:
        #      cpu: "100m"
        #      memory: "200Mi"
