05_Namespaces/Networkpolicies/networkpolicy.yaml
#kind: # https://kubernetes.io/docs/concepts/services-networking/network-policies/
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-cross-ns-communication
  namespace: dev-team
spec:
  podSelector:
    matchLabels:
      app: nginx-deploy
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
            matchLabels:
              name: default
